pin plugin-find-eresource to v4.0.0

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@folio/data-import": "5.0.4",
     "@folio/plugin-create-inventory-records": "~3.0.0",
     "@folio/plugin-find-contact": "~3.0.0",
+    "@folio/plugin-find-eresource": "~4.0.0",
     "@folio/plugin-find-instance": "6.1.6",
     "@folio/plugin-find-interface": "~3.0.0",
     "@folio/plugin-find-organization": "~3.0.0",
