UIGS-1 add new ui-module

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@folio/erm-usage": ">=1.0.3",
     "@folio/export-manager": ">=1.0.0",
     "@folio/finance": ">=1.1.0",
+    "@folio/gobi-settings": ">=1.0.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": ">=1.4.0",
