--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
     "@folio/search": ">=1.3.0",
+    "@folio/service-interation": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
     "@folio/stripes-erm-components": "^6.0.0",
