pin html-to-react to ~1.4.8

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@folio/stripes-cli": "~2.4.0",
     "@folio/stripes-acq-components": "~3.0.1",
     "@folio/stripes-erm-components": "~6.0.0",
+    "html-to-react": "~1.4.8",
     "minimist": "^1.2.3",
     "moment": "~2.29.1",
     "redux-form": "^8.0.0",
