use master branches

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@folio/agreements": "https://github.com/folio-org/ui-agreements.git#master",
     "@folio/licenses": "https://github.com/folio-org/ui-licenses.git#master",
-    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#rework-kb-assigned-users",
+    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#modify-marc-processing",
-    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#modify-marc-processing",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=7.0.0",
