--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/platform-complete",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "license": "Apache-2.0",
   "scripts": {
     "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes build stripes.config.js",
@@ -12,66 +12,67 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
-    "@folio/acquisition-units": "3.1.0",
-    "@folio/agreements": "8.1.2",
-    "@folio/calendar": "7.1.1",
-    "@folio/checkin": "7.0.1",
-    "@folio/checkout": "8.0.1",
-    "@folio/circulation": "7.0.3",
-    "@folio/circulation-log": "2.1.1",
+    "@folio/acquisition-units": "3.2.0",
+    "@folio/agreements": "8.2.0",
+    "@folio/bulk-edit": "2.0.0",
+    "@folio/calendar": "7.2.0",
+    "@folio/checkin": "7.1.0",
+    "@folio/checkout": "8.1.0",
+    "@folio/circulation": "7.1.0",
+    "@folio/circulation-log": "2.2.0",
     "@folio/courses": "5.1.0",
-    "@folio/dashboard": "2.1.2",
-    "@folio/data-export": "5.1.1",
-    "@folio/data-import": "5.1.6",
-    "@folio/developer": "6.1.0",
-    "@folio/eholdings": "7.1.5",
-    "@folio/erm-comparisons": "4.1.4",
-    "@folio/erm-usage": "6.1.1",
-    "@folio/export-manager": "2.1.2",
-    "@folio/finance": "3.1.2",
-    "@folio/handler-stripes-registry": "1.1.1",
-    "@folio/inventory": "9.0.12",
-    "@folio/invoice": "3.1.2",
-    "@folio/ldp": "1.6.2",
-    "@folio/licenses": "8.1.2",
-    "@folio/local-kb-admin": "5.1.6",
-    "@folio/marc-authorities": "1.0.5",
-    "@folio/myprofile": "7.0.0",
-    "@folio/notes": "6.1.0",
-    "@folio/oai-pmh": "3.1.0",
-    "@folio/orders": "3.1.4",
-    "@folio/organizations": "3.1.3",
-    "@folio/plugin-bursar-export": "2.1.0",
+    "@folio/dashboard": "2.2.0",
+    "@folio/data-export": "5.2.0",
+    "@folio/data-import": "5.2.0",
+    "@folio/developer": "6.2.0",
+    "@folio/eholdings": "7.2.0",
+    "@folio/erm-comparisons": "4.2.1",
+    "@folio/erm-usage": "6.2.0",
+    "@folio/export-manager": "2.2.0",
+    "@folio/finance": "3.2.0",
+    "@folio/handler-stripes-registry": "1.2.0",
+    "@folio/inventory": "9.1.0",
+    "@folio/invoice": "3.2.0",
+    "@folio/ldp": "1.8.0",
+    "@folio/licenses": "8.2.1",
+    "@folio/local-kb-admin": "5.2.0",
+    "@folio/marc-authorities": "1.1.0",
+    "@folio/myprofile": "7.1.0",
+    "@folio/notes": "6.2.0",
+    "@folio/oai-pmh": "3.2.0",
+    "@folio/orders": "3.2.0",
+    "@folio/organizations": "3.2.0",
+    "@folio/plugin-bursar-export": "2.2.0",
     "@folio/plugin-create-inventory-records": "3.1.0",
     "@folio/plugin-eusage-reports": "2.2.3",
-    "@folio/plugin-find-agreement": "8.1.1",
-    "@folio/plugin-find-contact": "3.1.1",
-    "@folio/plugin-find-eresource": "4.1.3",
-    "@folio/plugin-find-erm-usage-data-provider": "4.0.0",
-    "@folio/plugin-find-fund": "1.0.0",
-    "@folio/plugin-find-import-profile": "5.1.0",
-    "@folio/plugin-find-instance": "6.1.6",
-    "@folio/plugin-find-interface": "3.1.1",
-    "@folio/plugin-find-license": "8.1.1",
-    "@folio/plugin-find-organization": "3.1.1",
-    "@folio/plugin-find-package-title": "4.0.0",
-    "@folio/plugin-find-po-line": "3.1.1",
-    "@folio/plugin-find-user": "6.1.0",
-    "@folio/quick-marc": "5.0.3",
-    "@folio/receiving": "2.1.0",
-    "@folio/remote-storage": "3.1.0",
-    "@folio/requests": "7.0.2",
+    "@folio/plugin-find-agreement": "8.2.0",
+    "@folio/plugin-find-contact": "3.2.0",
+    "@folio/plugin-find-eresource": "4.2.0",
+    "@folio/plugin-find-erm-usage-data-provider": "4.1.0",
+    "@folio/plugin-find-fund": "1.1.0",
+    "@folio/plugin-find-import-profile": "5.2.0",
+    "@folio/plugin-find-instance": "6.2.0",
+    "@folio/plugin-find-interface": "3.2.0",
+    "@folio/plugin-find-license": "8.2.0",
+    "@folio/plugin-find-organization": "3.2.0",
+    "@folio/plugin-find-package-title": "4.1.0",
+    "@folio/plugin-find-po-line": "3.2.0",
+    "@folio/plugin-find-user": "6.2.0",
+    "@folio/quick-marc": "5.1.0",
+    "@folio/receiving": "2.2.0",
+    "@folio/remote-storage": "3.2.0",
+    "@folio/requests": "7.1.0",
     "@folio/search": "5.1.0",
-    "@folio/servicepoints": "6.0.0",
-    "@folio/stripes": "7.1.7",
-    "@folio/stripes-erm-components": "6.1.1",
-    "@folio/tags": "6.1.0",
-    "@folio/tenant-settings": "7.1.1",
-    "@folio/users": "8.0.4",
+    "@folio/servicepoints": "6.1.0",
+    "@folio/stripes": "7.2.0",
+    "@folio/stripes-erm-components": "6.2.0",
+    "@folio/tags": "6.2.0",
+    "@folio/tenant-settings": "7.2.0",
+    "@folio/users": "8.1.0",
     "moment": "~2.29.0",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "react-intl": "5.21.2",
+    "react-intl": "^5.25.1",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
@@ -83,14 +84,14 @@
   },
   "devDependencies": {
     "@folio/eslint-config-stripes": "^6.1.0",
-    "@folio/stripes-cli": "~2.5.0",
+    "@folio/stripes-cli": "~2.6.0",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
   },
   "resolutions": {
     "colors": "1.4.0",
     "@folio/react-intl-safe-html": "3.1.0",
-    "@folio/stripes-cli": "~2.5.0",
+    "@folio/stripes-cli": "~2.6.0",
     "@rehooks/local-storage": "2.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
