use tab subfields poc

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@folio/licenses": "https://github.com/folio-org/ui-licenses.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#field-split-poc",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#tab-subfields-poc",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
