add plugin to package.json

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@folio/plugin-create-inventory-records": ">=1.0.0",
     "@folio/plugin-eusage-reports": ">=1.0.0",
     "@folio/plugin-find-agreement": ">=2.0.0",
+    "@folio/plugin-find-authority": ">=0.1.0",
     "@folio/plugin-find-contact": ">=1.0.0",
     "@folio/plugin-find-eresource": ">=1.0.0",
     "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
