Added plugin find authority and authority components

--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@folio/licenses": "https://github.com/folio-org/ui-licenses.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#tab-subfields-poc",
-    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#marc-linking",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=7.0.0",
     "@folio/notes": ">=6.1.0",
+    "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
     "@folio/plugin-find-agreement": ">=8.1.0",
     "@folio/plugin-find-package-title": ">=4.0.0",
     "@folio/plugin-find-user": ">=6.1.0",
@@ -29,6 +30,7 @@
     "@folio/stripes": "^7.1.0",
     "@folio/stripes-core": "^8.1.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
+    "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-acq-components": ">=3.1.0",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "moment": "~2.29.0",
@@ -51,7 +53,6 @@
   },
   "resolutions": {
     "@folio/stripes-cli": "^2.4.0",
-    "@rehooks/local-storage": "2.4.0",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
