--- a/package.json
+++ b/package.json
@@ -89,13 +89,18 @@
   },
   "resolutions": {
     "colors": "1.4.0",
+    "@folio/circulation": "7.0.3",
+    "@folio/data-import": "5.1.6",
+    "@folio/plugin-create-inventory-records": "3.1.0",
     "@folio/plugin-find-contact": "3.1.1",
+    "@folio/plugin-find-eresource": "4.1.3",
     "@folio/plugin-find-fund": "1.0.0",
     "@folio/plugin-find-instance": "6.1.6",
     "@folio/plugin-find-interface": "3.1.1",
     "@folio/plugin-find-organization": "3.1.1",
     "@folio/plugin-find-po-line": "3.1.1",
     "@folio/plugin-find-user": "6.1.0",
+    "@folio/quick-marc": "5.0.3",
     "@folio/react-intl-safe-html": "3.1.0",
     "@folio/stripes-cli": "~2.5.0",
     "@rehooks/local-storage": "2.4.0",
