--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
+    "@folio/stripes-authority-components": "^0.1.0",
     "@folio/stripes-erm-components": "^6.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
