use master branch for all modules

--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#marc-linking",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
-    "@folio/myprofile": ">=7.0.0",
-    "@folio/notes": ">=6.1.0",
+    "@folio/myprofile": "https://github.com/folio-org/ui-myprofile.git#master",
+    "@folio/notes": "https://github.com/folio-org/ui-notes.git#master",
     "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
-    "@folio/plugin-find-agreement": ">=8.1.0",
-    "@folio/plugin-find-package-title": ">=4.0.0",
-    "@folio/plugin-find-user": ">=6.1.0",
-    "@folio/plugin-find-organization": ">=3.1.0",
-    "@folio/stripes": "^7.1.0",
+    "@folio/plugin-find-agreement": "https://github.com/folio-org/ui-plugin-find-agreement.git#master",
+    "@folio/plugin-find-package-title": "https://github.com/folio-org/ui-plugin-find-package-title.git#master",
+    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user.git#master",
+    "@folio/plugin-find-organization": "https://github.com/folio-org/ui-plugin-find-organization.git#master",
+    "@folio/stripes": "^7.2.0",
     "@folio/stripes-core": "^8.1.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
-    "@folio/stripes-acq-components": ">=3.1.0",
+    "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "moment": "~2.29.0",
     "react": "~17.0.2",
