use versions for agreements modules

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
-    "@folio/agreements": "https://github.com/folio-org/ui-agreements.git#master",
-    "@folio/licenses": "https://github.com/folio-org/ui-licenses.git#master",
+    "@folio/agreements": ">=8.2.2",
+    "@folio/licenses": ">=8.2.2",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
@@ -23,7 +23,7 @@
     "@folio/myprofile": "https://github.com/folio-org/ui-myprofile.git#master",
     "@folio/notes": "https://github.com/folio-org/ui-notes.git#master",
     "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
-    "@folio/plugin-find-agreement": "https://github.com/folio-org/ui-plugin-find-agreement.git#master",
+    "@folio/plugin-find-agreement": ">=8.2.0",
     "@folio/plugin-find-package-title": "https://github.com/folio-org/ui-plugin-find-package-title.git#master",
     "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user.git#master",
     "@folio/plugin-find-organization": "https://github.com/folio-org/ui-plugin-find-organization.git#master",
