--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
-    "@folio/agreements": ">=8.2.2",
-    "@folio/licenses": ">=8.2.2",
+    "@folio/agreements": ">=2.0.0",
+    "@folio/licenses": ">=2.0.0",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#marc-linking",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
-    "@folio/myprofile": "https://github.com/folio-org/ui-myprofile.git#master",
-    "@folio/notes": "https://github.com/folio-org/ui-notes.git#master",
+    "@folio/myprofile": ">=1.1.0",
+    "@folio/notes": ">=1.0.0",
     "@folio/plugin-find-authority": "https://github.com/folio-org/ui-plugin-find-authority.git#master",
-    "@folio/plugin-find-agreement": ">=8.2.0",
-    "@folio/plugin-find-package-title": "https://github.com/folio-org/ui-plugin-find-package-title.git#master",
-    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user.git#master",
-    "@folio/plugin-find-organization": "https://github.com/folio-org/ui-plugin-find-organization.git#master",
+    "@folio/plugin-find-agreement": ">=2.0.0",
+    "@folio/plugin-find-package-title": ">=1.0.0",
+    "@folio/plugin-find-user": ">=1.3.0",
+    "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/stripes": "^7.2.0",
     "@folio/stripes-core": "^8.1.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
