use whatever version of stripes-erm-components

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
-    "@folio/stripes-erm-components": "6.3.10000079",
+    "@folio/stripes-erm-components": "^6.3.0",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "moment": "~2.29.0",
     "react": "~17.0.2",
@@ -53,7 +53,6 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
-    "@folio/stripes-erm-components": "6.3.10000079",
     "@folio/stripes-cli": "^2.4.0",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
