--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@folio/licenses": ">=2.0.0",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
-    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#marc-linking",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#UIQM-255",
+    "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=1.1.0",
@@ -32,7 +32,7 @@
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
-    "@folio/stripes-erm-components": "^6.3.0",
+    "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "moment": "~2.29.0",
     "react": "~17.0.2",
