Rebase against snapshot

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@folio/acquisition-units": ">=1.0.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
-    "@folio/calendar": ">=2.0.5",
+    "@folio/calendar": "https://github.com/folio-org/ui-calendar.git#ualibweb/new-ui-calendar",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
@@ -97,6 +97,7 @@
   "resolutions": {
     "@folio/stripes-cli": "^2.4.0",
     "@rehooks/local-storage": "2.4.0",
+    "@folio/stripes-webpack": "https://github.com/ualibweb/stripes-webpack#ualibweb/test-ts-loader-node_modules",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
