--- a/package.json
+++ b/package.json
@@ -76,9 +76,13 @@
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
+    "final-form": "^4.20.7",
+    "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.3",
     "react-intl": "^5.25.1",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
@@ -86,8 +90,10 @@
     "react-router-dom": "^5.2.0",
     "react-titled": "^1.0.1",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.7",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@folio/stripes-cli": "^2.0.0",
