lock to @babel/generator 7.19.3
Lock to `@babel/generator` `7.19.3`, avoiding the recent `.4` release.

h/t @BogdanDenis for pointing out this release.

--- a/package.json
+++ b/package.json
@@ -90,13 +90,12 @@
     "swr": "^0.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
     "@folio/stripes-cli": "^2.0.0",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@babel/generator": "7.19.3",
     "@folio/stripes-cli": "^2.4.0",
     "@rehooks/local-storage": "2.4.0",
     "colors": "1.4.0",
