--- a/package.json
+++ b/package.json
@@ -12,6 +12,50 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
+    "@folio/acquisition-units": ">=1.0.0",
+    "@folio/bulk-edit": ">=1.0.0",
+    "@folio/calendar": ">=2.0.5",
+    "@folio/checkin": ">=1.3.0",
+    "@folio/checkout": ">=1.3.0",
+    "@folio/circulation": ">=1.3.0",
+    "@folio/circulation-log": ">=1.0.0",
+    "@folio/courses": ">=1.0.0",
+    "@folio/dashboard": ">=1.0.0",
+    "@folio/data-export": ">=1.0.0",
+    "@folio/developer": ">=1.5.0",
+    "@folio/erm-comparisons": ">=1.0.0",
+    "@folio/erm-usage": ">=1.0.3",
+    "@folio/export-manager": ">=1.0.0",
+    "@folio/finance": ">=1.1.0",
+    "@folio/gobi-settings": ">=1.0.0",
+    "@folio/handler-stripes-registry": ">=1.0.0",
+    "@folio/inn-reach": ">=1.1.0",
+    "@folio/invoice": ">=1.0.0",
+    "@folio/ldp": ">=1.1.0",
+    "@folio/local-kb-admin": ">=1.0.0",
+    "@folio/oa": ">=1.0.0",
+    "@folio/oai-pmh": ">=1.0.0",
+    "@folio/orders": ">=1.1.0",
+    "@folio/organizations": ">=1.0.0",
+    "@folio/plugin-bursar-export": ">=1.0.0",
+    "@folio/plugin-create-inventory-records": ">=1.0.0",
+    "@folio/plugin-eusage-reports": ">=1.0.0",
+    "@folio/plugin-find-contact": ">=1.0.0",
+    "@folio/plugin-find-eresource": ">=1.0.0",
+    "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
+    "@folio/plugin-find-fund": ">=1.0.0",
+    "@folio/plugin-find-import-profile": ">=1.1.0",
+    "@folio/plugin-find-instance": ">=1.1.0",
+    "@folio/plugin-find-interface": ">=1.0.0",
+    "@folio/plugin-find-license": ">=2.0.0",
+    "@folio/plugin-find-po-line": ">=1.0.0",
+    "@folio/receiving": ">=1.0.0",
+    "@folio/remote-storage": ">=1.0.0",
+    "@folio/requests": ">=1.4.1",
+    "@folio/search": ">=1.3.0",
+    "@folio/service-interaction": ">=1.0.0",
+    "@folio/servicepoints": ">=1.1.0",
+    "@folio/tags": ">=1.1.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/licenses": ">=2.0.0",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
@@ -34,18 +78,24 @@
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
+    "final-form": "^4.20.7",
+    "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "react-intl": "5.21.0",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.3",
+    "react-intl": "^5.25.1",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-titled": "^1.0.1",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.7",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@folio/stripes-cli": "^2.0.0",
@@ -53,13 +103,13 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "autoprefixer": "^10.4.4",
     "@folio/stripes-cli": "^2.4.0",
+    "@rehooks/local-storage": "2.4.0",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0",
-    "postcss": "^8.4.12",
-    "autoprefixer": "^10.4.4"
+    "redux-form": "^8.0.0"
   }
 }
