added quick marc to resolutions

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@folio/licenses": ">=2.0.0",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#authority-linking",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
@@ -110,6 +109,7 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0"
+    "redux-form": "^8.0.0",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#authority-linking"
   }
 }
