FOLIO-3568: Add serials-management to snapshot

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
+    "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
