added stripes-testing to dependencies

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/stripes": "^7.2.0",
     "@folio/stripes-core": "^8.1.0",
+    "@folio/stripes-testing": "^4.2.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
