test: stripes-erm-components branch without @testing-library/react

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
     "@folio/stripes-authority-components": "^1.0.0",
-    "@folio/stripes-erm-components": "^7.0.0",
+    "@folio/stripes-erm-components": "folio-org/stripes-erm-components#ERM-2396",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
