reconfigure renovate bot for Nolana

--- a/renovate.json
+++ b/renovate.json
@@ -32,7 +32,7 @@
       "baseBranchList": ["main", "master"],
       "packagePatterns": ["^@folio/","^folioorg/"],
       "groupName": "Main branch updates",
-      "updateTypes": ["patch"], 
+      "updateTypes": ["minor", "patch"], 
       "enabled": true
     },
     { 
