--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
     "enabled": false
   },
   "minor": {
-    "enabled": true
+    "enabled": false
   },
   "patch": {
     "enabled": true
@@ -32,7 +32,7 @@
       "baseBranchList": ["main", "master"],
       "packagePatterns": ["^@folio/","^folioorg/"],
       "groupName": "Main branch updates",
-      "updateTypes": ["minor", "patch"], 
+      "updateTypes": ["patch"], 
       "enabled": true
     },
     { 
