--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@folio/eslint-config-stripes": "^6.1.0",
     "@folio/stripes-cli": "^2.0.0",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
@@ -101,6 +100,7 @@
   "resolutions": {
     "colors": "1.4.0",
     "@folio/stripes-cli": "^2.4.0",
+    "@folio/stripes-webpack": "4.1.0",
     "@rehooks/local-storage": "2.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
