change back removed resolution

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   },
   "resolutions": {
     "colors": "1.4.0",
+    "@folio/react-intl-safe-html": "3.1.0",
     "@folio/stripes-cli": "^2.4.0",
     "@folio/stripes-webpack": "4.1.0",
     "@rehooks/local-storage": "2.4.0",
