--- a/package.json
+++ b/package.json
@@ -14,65 +14,72 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
-    "@folio/acquisition-units": "3.2.0",
-    "@folio/agreements": "8.2.2",
-    "@folio/bulk-edit": "2.0.3",
-    "@folio/calendar": "7.2.0",
-    "@folio/checkin": "7.1.1",
-    "@folio/checkout": "8.1.0",
-    "@folio/circulation": "7.1.0",
-    "@folio/circulation-log": "2.2.1",
-    "@folio/courses": "5.2.0",
-    "@folio/dashboard": "2.2.0",
-    "@folio/data-export": "5.2.3",
-    "@folio/data-import": "5.2.4",
-    "@folio/developer": "6.2.0",
-    "@folio/eholdings": "7.2.3",
-    "@folio/erm-comparisons": "4.2.1",
-    "@folio/erm-usage": "6.2.0",
-    "@folio/export-manager": "2.2.3",
-    "@folio/finance": "3.2.1",
-    "@folio/handler-stripes-registry": "1.2.0",
-    "@folio/inventory": "9.1.13",
-    "@folio/invoice": "3.2.3",
-    "@folio/ldp": "1.8.0",
-    "@folio/licenses": "8.2.2",
-    "@folio/local-kb-admin": "5.2.0",
-    "@folio/marc-authorities": "1.1.2",
-    "@folio/myprofile": "7.1.0",
-    "@folio/notes": "6.2.0",
-    "@folio/oai-pmh": "3.2.2",
-    "@folio/orders": "3.2.2",
-    "@folio/organizations": "3.2.2",
-    "@folio/plugin-bursar-export": "2.2.1",
-    "@folio/plugin-create-inventory-records": "3.1.0",
-    "@folio/plugin-eusage-reports": "2.2.3",
-    "@folio/plugin-find-agreement": "8.2.0",
-    "@folio/plugin-find-contact": "3.2.0",
-    "@folio/plugin-find-eresource": "4.2.0",
-    "@folio/plugin-find-erm-usage-data-provider": "4.1.0",
-    "@folio/plugin-find-fund": "1.1.0",
-    "@folio/plugin-find-import-profile": "5.2.0",
-    "@folio/plugin-find-instance": "6.2.0",
-    "@folio/plugin-find-interface": "3.2.0",
-    "@folio/plugin-find-license": "8.2.0",
-    "@folio/plugin-find-organization": "3.2.0",
-    "@folio/plugin-find-package-title": "4.1.0",
-    "@folio/plugin-find-po-line": "3.2.0",
+    "@folio/acquisition-units": "3.3.0",
+    "@folio/agreements": "8.3.0",
+    "@folio/bulk-edit": "2.1.0",
+    "@folio/calendar": "8.0.0",
+    "@folio/checkin": "7.2.0",
+    "@folio/checkout": "8.2.0",
+    "@folio/circulation": "7.2.0",
+    "@folio/circulation-log": "2.3.0",
+    "@folio/courses": "5.3.0",
+    "@folio/dashboard": "3.0.3",
+    "@folio/data-export": "5.3.0",
+    "@folio/data-import": "5.3.1",
+    "@folio/developer": "6.3.0",
+    "@folio/eholdings": "7.3.0",
+    "@folio/erm-comparisons": "4.3.0",
+    "@folio/erm-usage": "6.3.0",
+    "@folio/export-manager": "2.3.0",
+    "@folio/finance": "3.3.0",
+    "@folio/gobi-settings": "1.0.0",
+    "@folio/handler-stripes-registry": "1.3.0",
+    "@folio/inventory": "9.2.0",
+    "@folio/invoice": "3.3.0",
+    "@folio/ldp": "1.9.0",
+    "@folio/licenses": "8.3.0",
+    "@folio/local-kb-admin": "5.3.0",
+    "@folio/marc-authorities": "2.0.0",
+    "@folio/myprofile": "7.2.0",
+    "@folio/notes": "7.0.0",
+    "@folio/oai-pmh": "3.3.0",
+    "@folio/orders": "3.3.0",
+    "@folio/organizations": "3.3.0",
+    "@folio/plugin-bursar-export": "2.3.0",
+    "@folio/plugin-create-inventory-records": "3.2.0",
+    "@folio/plugin-eusage-reports": "2.3.0",
+    "@folio/plugin-find-agreement": "8.3.0",
+    "@folio/plugin-find-authority": "1.0.0",
+    "@folio/plugin-find-contact": "3.3.0",
+    "@folio/plugin-find-eresource": "4.3.0",
+    "@folio/plugin-find-erm-usage-data-provider": "4.2.0",
+    "@folio/plugin-find-fund": "1.2.0",
+    "@folio/plugin-find-import-profile": "5.3.0",
+    "@folio/plugin-find-instance": "6.3.0",
+    "@folio/plugin-find-interface": "3.3.0",
+    "@folio/plugin-find-license": "8.3.0",
+    "@folio/plugin-find-organization": "3.3.0",
+    "@folio/plugin-find-package-title": "4.2.0",
+    "@folio/plugin-find-po-line": "3.3.0",
     "@folio/plugin-find-user": "6.3.0",
-    "@folio/quick-marc": "5.1.2",
-    "@folio/receiving": "2.2.0",
-    "@folio/remote-storage": "3.2.2",
-    "@folio/requests": "7.1.3",
-    "@folio/servicepoints": "6.1.0",
-    "@folio/stripes": "7.2.3",
-    "@folio/stripes-erm-components": "6.2.1",
-    "@folio/tags": "6.2.0",
-    "@folio/tenant-settings": "7.2.0",
-    "@folio/users": "8.1.3",
+    "@folio/quick-marc": "5.2.0",
+    "@folio/receiving": "2.3.0",
+    "@folio/remote-storage": "3.3.0",
+    "@folio/requests": "7.2.0",
+    "@folio/servicepoints": "6.2.0",
+    "@folio/stripes": "7.3.1",
+    "@folio/stripes-authority-components": "1.0.0",
+    "@folio/stripes-erm-components": "7.0.2",
+    "@folio/tags": "6.3.0",
+    "@folio/tenant-settings": "7.3.0",
+    "@folio/users": "8.2.0",
+    "final-form": "^4.20.7",
+    "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.3",
     "react-intl": "^5.25.1",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
@@ -80,19 +87,20 @@
     "react-router-dom": "^5.2.0",
     "react-titled": "^1.0.1",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.7",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@folio/eslint-config-stripes": "^6.1.0",
-    "@folio/stripes-cli": "~2.6.0",
+    "@folio/stripes-cli": "^2.6.0",
     "eslint": "^6.2.1",
     "lodash": "^4.17.5"
   },
   "resolutions": {
     "colors": "1.4.0",
-    "@folio/react-intl-safe-html": "3.1.0",
-    "@folio/stripes-cli": "~2.6.0",
+    "@folio/stripes-cli": "^2.4.0",
+    "@folio/stripes-webpack": "4.1.1",
     "@rehooks/local-storage": "2.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
