use MG branch for quickMARC

--- a/package.json
+++ b/package.json
@@ -81,6 +81,6 @@
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
     "redux-form": "^8.0.0",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#authority-linking"
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#b5.1"
   }
 }
