revert ui-checkout branch on package json and upgrade checkout

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
-    "@folio/checkout": "https://github.com/folio-org/ui-checkout.git#UICHKOUT-809",
+    "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
