--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
   "resolutions": {
     "@folio/stripes-cli": "^2.4.0",
     "@rehooks/local-storage": "2.4.0",
+    "@folio/stripes-ui": "folio-org/stripes-ui#STRIPESUI-2",
+    "@folio/stripes-core": "folio-org/stripes-core#STCOR-663",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
