--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#UICHKIN-349",
+    "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UICIRC-819",
+    "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
@@ -64,7 +64,7 @@
     "@folio/quick-marc": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UIREQ-809",
+    "@folio/requests": ">=1.4.1",
     "@folio/search": ">=1.3.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^7.0.0",
