--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^8.0.0",
-    "@folio/stripes-authority-components": "^1.0.0",
+    "@folio/stripes-authority-components": ">=2.0.0",
     "@folio/stripes-erm-components": "^8.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
