Updated stripes and modules

--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-find-organization": ">=1.0.0",
-    "@folio/stripes": "^7.2.0",
-    "@folio/stripes-core": "^8.1.0",
+    "@folio/stripes": "^8.0.0",
+    "@folio/stripes-core": "^9.0.0",
     "@folio/stripes-testing": "^4.2.0",
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -80,7 +81,6 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#b5.1"
+    "redux-form": "^8.0.0"
   }
 }
