--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
+    "@folio/consortia-settings": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
     "@folio/data-export": ">=1.0.0",
