pin dependencies in resolutions to prevent Orchid deps - FOLIO-3740

--- a/package.json
+++ b/package.json
@@ -99,7 +99,12 @@
   },
   "resolutions": {
     "colors": "1.4.0",
+    "@folio/plugin-create-inventory-records": "3.2.1",
+    "@folio/plugin-find-instance": "6.3.1",
+    "@folio/plugin-find-user": "6.3.0",
+    "@folio/stripes-acq-components": "3.3.2",
     "@folio/stripes-cli": "^2.4.0",
+    "@folio/stripes-data-transfer-components": "5.3.0",
     "@folio/stripes-webpack": "4.1.2",
     "@rehooks/local-storage": "2.4.4",
     "final-form": "^4.20.4",
