--- a/package.json
+++ b/package.json
@@ -92,7 +92,17 @@
   },
   "resolutions": {
     "@apollo/client": "3.7.4",
+    "@folio/circulation": "7.1.0",
+    "@folio/plugin-create-inventory-records": "3.1.0",
+    "@folio/plugin-find-eresource": "4.2.0",
+    "@folio/plugin-find-instance": "6.2.0",
+    "@folio/plugin-find-organization": "3.2.0",
+    "@folio/plugin-find-po-line": "3.2.0",
+    "@folio/plugin-find-user": "6.3.0",
+    "@folio/quick-marc": "5.1.3",
     "@folio/react-intl-safe-html": "3.1.0",
+    "@folio/stripes-acq-components": "3.2.4",
+    "@folio/stripes-data-transfer-components": "5.3.0",
     "@rehooks/local-storage": "2.4.4",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
