pin a few more stripes deps

--- a/package.json
+++ b/package.json
@@ -94,8 +94,11 @@
     "@apollo/client": "3.7.4",
     "@folio/circulation": "7.1.0",
     "@folio/plugin-create-inventory-records": "3.1.0",
+    "@folio/plugin-find-contact": "3.2.0",
     "@folio/plugin-find-eresource": "4.2.0",
+    "@folio/plugin-find-fund": "1.1.0",
     "@folio/plugin-find-instance": "6.2.0",
+    "@folio/plugin-find-interface": "3.2.0",
     "@folio/plugin-find-organization": "3.2.0",
     "@folio/plugin-find-po-line": "3.2.0",
     "@folio/plugin-find-user": "6.3.0",
