--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@folio/tags": ">=1.1.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/licenses": ">=2.0.0",
-    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
+    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#UIEH-1355",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
