use UIQM-463 branch

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@folio/tags": ">=1.1.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/licenses": ">=2.0.0",
-    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#UIEH-1355",
+    "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#master",
@@ -48,7 +48,7 @@
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
-    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
+    "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#UIQM-463",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
