upgrade ui-inn-reach with private branch

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@folio/export-manager": ">=1.0.0",
     "@folio/finance": ">=1.1.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
-    "@folio/inn-reach": ">=1.0.0",
+    "@folio/inn-reach": "https://github.com/folio-org/ui-inn-reach.git#UIINREACH-222",
     "@folio/inventory": ">=1.4.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
