--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": ">=1.3.0",
+    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#UICHKIN-350",
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
@@ -32,7 +32,7 @@
     "@folio/export-manager": ">=1.0.0",
     "@folio/finance": ">=1.1.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
-    "@folio/inn-reach": "https://github.com/folio-org/ui-inn-reach.git#UIINREACH-222",
+    "@folio/inn-reach": ">=1.0.0",
     "@folio/inventory": ">=1.4.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
