snapshot equivalent for volaris rancher

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@folio/platform-complete",
   "version": "1.1.0-SNAPSHOT",
   "license": "Apache-2.0",
+  "description": "Volaris-snapshot-rancher is branched out from snapshot in order to have latest build on volaris rancher envs",
   "scripts": {
     "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes build stripes.config.js",
     "stripes": "stripes",
