change for UXPROD-4179

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@folio/calendar": "9.2.1",
     "@folio/checkin": "8.0.1",
     "@folio/checkout": "9.0.1",
-    "@folio/circulation": "8.0.1",
+    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UXPROD-4179",
     "@folio/circulation-log": "3.0.0",
     "@folio/courses": "5.4.0",
     "@folio/dashboard": "4.0.1",
