--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@folio/quick-marc": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UIREQ-814",
+    "@folio/requests": ">=1.4.1",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
