UXPROD-4179 added link for ui-checkin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@folio/agreements": "9.0.2",
     "@folio/bulk-edit": "3.0.5",
     "@folio/calendar": "9.2.1",
-    "@folio/checkin": "8.0.1",
+    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#UXPROD-4179",
     "@folio/checkout": "9.0.1",
     "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UXPROD-4179",
     "@folio/circulation-log": "3.0.0",
