update circ log with private branch

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
-    "@folio/circulation-log": ">=1.0.0",
+    "@folio/circulation-log": "https://github.com/folio-org/ui-circulation-log.git#UICIRCLOG-115",
     "@folio/consortia-settings": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
