revert folio users private branch

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@folio/stripes-erm-components": "^8.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": "https://github.com/folio-org/ui-users.git#UIU-1631-test",
+    "@folio/users": ">=2.17.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
