--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@folio/finance": ">=1.1.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": ">=1.4.0",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-2397",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
