--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@folio/search": ">=1.3.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^8.0.0",
+    "@folio/stripes-authority-components": "2.0.0",
     "@folio/stripes-erm-components": "^6.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
