--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@folio/agreements": "9.0.2",
     "@folio/bulk-edit": "3.0.5",
     "@folio/calendar": "9.2.1",
-    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#UXPROD-4179",
+    "@folio/checkin": "https://github.com/folio-org/ui-checkin.git#CIRC-1784",
     "@folio/checkout": "9.0.1",
-    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UXPROD-4179",
+    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#CIRC-1784",
     "@folio/circulation-log": "3.0.0",
     "@folio/courses": "5.4.0",
     "@folio/dashboard": "4.0.1",
@@ -65,7 +65,7 @@
     "@folio/quick-marc": "6.0.2",
     "@folio/receiving": "3.0.0",
     "@folio/remote-storage": "4.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UXPROD-4179",
+    "@folio/requests": "https://github.com/folio-org/ui-requests.git#CIRC-1784",
     "@folio/servicepoints": "6.3.0",
     "@folio/stripes": "8.0.9",
     "@folio/stripes-authority-components": "2.0.2",
