experimental change - using temp branch code

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@folio/quick-marc": "6.0.2",
     "@folio/receiving": "3.0.0",
     "@folio/remote-storage": "4.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#CIRC-1784",
+    "@folio/requests": "https://github.com/folio-org/ui-requests.git#CIRC-1784-exp-to-be-deleted",
     "@folio/servicepoints": "6.3.0",
     "@folio/stripes": "8.0.9",
     "@folio/stripes-authority-components": "2.0.2",
