Add testing module versions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@folio/acquisition-units": ">=1.0.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
-    "@folio/calendar": ">=2.0.5",
+    "@folio/calendar": "https://github.com/folio-org/ui-calendar#uical-268",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
@@ -47,7 +47,7 @@
     "@folio/oai-pmh": ">=1.0.0",
     "@folio/orders": ">=1.1.0",
     "@folio/organizations": ">=1.0.0",
-    "@folio/plugin-bursar-export": ">=1.0.0",
+    "@folio/plugin-bursar-export": "https://github.com/ualibweb/ui-plugin-bursar-export",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
     "@folio/plugin-eusage-reports": ">=1.0.0",
     "@folio/plugin-find-agreement": ">=2.0.0",
@@ -72,12 +72,13 @@
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
-    "@folio/stripes": "^8.0.0",
+    "@folio/stripes": "https://github.com/ualibweb/stripes#stripes-859",
     "@folio/stripes-authority-components": ">=2.0.0",
     "@folio/stripes-erm-components": "^8.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
+    "@types/react": "^17.0.52",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -103,6 +104,7 @@
   },
   "resolutions": {
     "@rehooks/local-storage": "2.4.4",
+    "@types/react": "^17.0.52",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
