--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@folio/finance": "5.0.0",
     "@folio/gobi-settings": "3.0.0",
     "@folio/handler-stripes-registry": "2.0.1",
+    "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": "10.0.15",
     "@folio/invoice": "5.0.2",
     "@folio/ldp": "2.0.1",
