--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@folio/notes": ">=1.0.0",
     "@folio/oa": ">=1.0.0",
     "@folio/oai-pmh": ">=1.0.0",
-    "@folio/orders": "https://github.com/folio-org/ui-orders.git#UIOR-1283",
+    "@folio/orders": ">=1.0.0",
     "@folio/organizations": ">=1.0.0",
     "@folio/plugin-bursar-export": ">=1.0.0",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
@@ -68,7 +68,7 @@
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
-    "@folio/receiving": "https://github.com/folio-org/ui-receiving.git#UIREC-339",
+    "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
     "@folio/requests-mediated": ">=1.0.0",
