RANCHER-1557 Q release build UI test | revert

--- a/eureka-tpl/package.json
+++ b/eureka-tpl/package.json
@@ -38,7 +38,7 @@
     "@folio/handler-stripes-registry": "2.0.1",
     "@folio/inn-reach": "4.0.0",
     "@folio/inventory": "10.0.10",
-    "@folio/invoice": "^6.0.1",
+    "@folio/invoice": "6.0.1",
     "@folio/ldp": "2.0.1",
     "@folio/licenses": "10.0.0",
     "@folio/lists": "2.0.6",
