--- a/eureka-tpl/package.json
+++ b/eureka-tpl/package.json
@@ -84,7 +84,7 @@
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": ">=2.17.0",
+    "@folio/users": "folio-org/ui-users#keycloak-ramsons",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -115,6 +115,7 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0"
+    "redux-form": "^8.0.0",
+    "@folio/stripes-core": "folio-org/stripes-core#keycloak-ramsons"
   }
 }
