--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
+    "@folio/lists": ">=1.2.0",
     "@folio/local-kb-admin": ">=1.0.0",
     "@folio/marc-authorities": ">=1.0.0",
     "@folio/myprofile": ">=1.1.0",
@@ -68,7 +69,7 @@
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": "https://github.com/folio-org/ui-requests.git#UIREQ-1115",
-    "@folio/requests-mediated": "https://github.com/folio-org/ui-requests-mediated.git#UIREQMED-32",
+    "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
