--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": "https://github.com/folio-org/ui-users#testPPCompression",
+    "@folio/users": "https://github.com/folio-org/ui-users#test-pp-compression",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
