--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@folio/reading-room": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": ">=1.4.1",
+    "@folio/requests": "https://github.com/folio-org/ui-receiving.git#UIREC-373",
     "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
