--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@folio/plugin-find-license": ">=2.0.0",
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
-    "@folio/plugin-find-po-line": ">=1.0.0",
+    "@folio/plugin-find-po-line": "https://github.com/folio-org/ui-plugin-find-po-line.git#UIPFPOL-79",
     "@folio/plugin-find-user": ">=1.0.0",
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
@@ -109,6 +109,7 @@
   },
   "resolutions": {
     "@rehooks/local-storage": "2.4.4",
+    "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#UISACQCOMP-194",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
