--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/users": ">=2.17.0",
+    "@folio/workflow": "https://github.com/folio-org/ui-workflow.git#platform-complete-aggies",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
