--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-po-line": ">=1.0.0",
-    "@folio/plugin-find-user": ">=1.3.0",
+    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user#UIPFU-temp",
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
@@ -82,7 +82,7 @@
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
-    "@folio/users": "https://github.com/folio-org/ui-users#UIU-3176",
+    "@folio/users": ">=2.17.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -113,6 +113,7 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0"
+    "redux-form": "^8.0.0",
+    "@folio/stripes-components": "https://github.com/folio-org/stripes-components#STCOM-1331"
   }
 }
