--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": ">=1.3.0",
+    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UXPROD-4559-ECS",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
@@ -69,7 +69,7 @@
     "@folio/reading-room": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": ">=1.4.1",
+    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UXPROD-4559-ECS",
     "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
@@ -80,7 +80,7 @@
     "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
-    "@folio/tenant-settings": ">=2.5.1",
+    "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#UITEN-281",
     "@folio/users": ">=2.17.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
