--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
   },
   "resolutions": {
     "@rehooks/local-storage": "2.4.4",
+    "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#feature-loading",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
