mark UIPFU to private branch UIPFU-96

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-po-line": ">=1.0.0",
-    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user#UIPFU-temp",
+    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user#UIPFU-96",
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
