--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
