--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@folio/checkout": ">=1.3.0",
     "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
-    "@folio/consortia-settings": ">=1.0.0",
+    "@folio/consortia-settings": "https://github.com/folio-org/ui-consortia-settings.git#UICONSET-173",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
     "@folio/data-export": ">=1.0.0",
@@ -68,7 +68,7 @@
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
-    "@folio/receiving": "https://github.com/folio-org/ui-receiving.git#UIREC-393",
+    "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
     "@folio/requests-mediated": ">=1.0.0",
@@ -76,7 +76,7 @@
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^9.0.0",
-    "@folio/stripes-authority-components": ">=2.0.0",
+    "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authorization-components.git#UISAUTHCOM-14",
     "@folio/stripes-erm-components": "^9.0.0",
     "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
