--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@folio/erm-usage": ">=1.0.3",
     "@folio/export-manager": ">=1.0.0",
     "@folio/finance": ">=1.0.0",
-    "@folio/gobi-settings": ">=1.0.0",
+    "@folio/gobi-settings": "https://github.com/folio-org/ui-gobi-settings.git#UIGS-25",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": ">=1.4.0",
@@ -76,7 +76,7 @@
     "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^9.0.0",
-    "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authorization-components.git#UISAUTHCOM-14",
+    "@folio/stripes-authority-components": ">=1.0.0",
     "@folio/stripes-erm-components": "^9.0.0",
     "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": ">=1.0.0",
