Add @folio/stripes-template-editor to resolutions of package.json

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@folio/stripes-template-editor": "v3.3.4",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
     "colors": "1.4.0",
