--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@folio/finance": ">=1.1.0",
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3072",
+    "@folio/inventory": ">=1.0.0",
     "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
@@ -56,7 +56,7 @@
     "@folio/plugin-find-erm-usage-data-provider": ">=1.0.0",
     "@folio/plugin-find-fund": ">=1.0.0",
     "@folio/plugin-find-import-profile": ">=1.0.0",
-    "@folio/plugin-find-instance": "https://github.com/folio-org/ui-plugin-find-instance.git#UIIN-3072",
+    "@folio/plugin-find-instance": ">=1.1.0",
     "@folio/plugin-find-interface": ">=1.0.0",
     "@folio/plugin-find-license": ">=2.0.0",
     "@folio/plugin-find-organization": ">=1.0.0",
@@ -72,7 +72,7 @@
     "@folio/stripes": "^9.0.0",
     "@folio/stripes-authority-components": ">=2.0.0",
     "@folio/stripes-erm-components": "^9.0.0",
-    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#UIIN-3072",
+    "@folio/stripes-inventory-components": ">=1.0.0",
     "@folio/stripes-marc-components": "^1.0.10000022",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
