Add consortia related modules and update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "baseBranches": ["main", "master", "R1-2024"],
+  "baseBranches": ["main", "master","R2-2024-Consortia"],
   "branchPrefix": "renovate_",
   "automerge": false,
   "separateMinorPatch": true,
@@ -36,9 +36,9 @@
       "enabled": true
     },
     {
-      "baseBranchList": ["R1-2024"],
+      "baseBranchList": ["R2-2024-Consortia"],
       "packagePatterns": ["^@folio/", "^folioorg/"],
-      "groupName": "FOLIO R1 2024 updates",
+      "groupName": "FOLIO R2 2024 updates Consortia",
       "updateTypes": ["patch"],
       "enabled": true
     }
