--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@folio/checkout": "11.0.0",
     "@folio/circulation": "9.2.0",
     "@folio/circulation-log": "5.0.0",
+    "@folio/consortia-settings": "2.0.0",
     "@folio/courses": "6.1.0",
     "@folio/dashboard": "6.1.0",
     "@folio/data-export": "6.2.0",
