--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@folio/inventory": "12.0.1",
     "@folio/invoice": "6.1.0",
     "@folio/ldp": "2.3.0",
+    "@folio/ld-folio-wrapper": "https://github.com/folio-org/ui-ld-folio-wrapper.git#temporary/release",
     "@folio/licenses": "11.1.0",
     "@folio/lists" : "3.1.1",
     "@folio/local-kb-admin": "8.1.0",
