--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": ">=1.1.0",
-    "@folio/invoice": "https://github.com/folio-org/ui-invoice.git#UINV-553",
+    "@folio/invoice": ">=1.0.0",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
     "@folio/lists": ">=1.2.0",
@@ -46,8 +46,8 @@
     "@folio/notes": ">=1.0.0",
     "@folio/oa": ">=1.0.0",
     "@folio/oai-pmh": ">=1.0.0",
-    "@folio/orders": "https://github.com/folio-org/ui-orders.git#audit-events-sort",
-    "@folio/organizations": ">=1.0.0",
+    "@folio/orders": ">=1.0.0",
+    "@folio/organizations": "https://github.com/folio-org/ui-organizations.git#UIORGS-356",
     "@folio/plugin-bursar-export": ">=1.0.0",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
     "@folio/plugin-eusage-reports": ">=1.0.0",
@@ -108,6 +108,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@folio/stripes": "https://github.com/folio-org/stripes-acq-components.git#UISACQCOMP-230",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.4",
     "colors": "1.4.0",
