--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@folio/oa": ">=1.0.0",
     "@folio/oai-pmh": ">=1.0.0",
     "@folio/orders": ">=1.0.0",
-    "@folio/organizations": "https://github.com/folio-org/ui-organizations.git#UIORGS-356",
+    "@folio/organizations": ">=1.0.0",
     "@folio/plugin-bursar-export": ">=1.0.0",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
     "@folio/plugin-eusage-reports": ">=1.0.0",
@@ -108,7 +108,6 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
-    "@folio/stripes": "https://github.com/folio-org/stripes-acq-components.git#UISACQCOMP-230",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.4",
     "colors": "1.4.0",
