Add "@types/react": "^18" to resolutions

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@types/react": "^18",
     "@folio/stripes-template-editor": "3.4.1",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
