Add "@jridgewell/gen-mapping": "0.3.7"

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@jridgewell/gen-mapping": "0.3.7",
     "@types/react": "^18",
     "@folio/stripes-template-editor": "3.4.1",
     "typescript": "~5.5",
