Align modules in install-extras.json and @jridgewell/gen-mapping, @types/react to package.json resolutions

--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@jridgewell/gen-mapping": "0.3.7",
+    "@types/react": "^18",
     "@folio/stripes-template-editor": "v3.3.4",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
