use UIIN-3162 feature branch for Inventory

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@folio/requests": "https://github.com/folio-org/ui-requests.git#master",
     "@folio/eholdings": "https://github.com/folio-org/ui-eholdings.git#master",
     "@folio/marc-authorities": "https://github.com/folio-org/ui-marc-authorities.git#master",
-    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#master",
+    "@folio/inventory": "https://github.com/folio-org/ui-inventory.git#UIIN-3162",
     "@folio/data-import": "https://github.com/folio-org/ui-data-import.git#master",
     "@folio/myprofile": ">=1.1.0",
     "@folio/notes": ">=1.0.0",
