renovate config migration

--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,23 @@
 {
-  "baseBranches": ["main", "master", "R2-2024"],
+  "baseBranches": [
+    "main",
+    "master",
+    "R2-2024"
+  ],
   "branchPrefix": "renovate_",
   "automerge": false,
   "separateMinorPatch": true,
   "separateMajorMinor": true,
   "updateLockFiles": false,
   "rangeStrategy": "replace",
-  "ignoreDeps": ["eslint","lodash","react","react-dom","react-redux","redux"],
-
+  "ignoreDeps": [
+    "eslint",
+    "lodash",
+    "react",
+    "react-dom",
+    "react-redux",
+    "redux"
+  ],
   "major": {
     "enabled": false
   },
@@ -17,30 +27,48 @@
   "patch": {
     "enabled": true
   },
-
-  "regexManagers": [
+  "customManagers": [
     {
-      "fileMatch": [ "^install-extras.json$" ],
-      "matchStrings": [ "\\\"(?<moduleName>(mod-|edge-|okapi).*?)-(?<currentValue>[0-9]+\\.[0-9]+\\.[0-9]+?)\\\"" ],
+      "customType": "regex",
+      "fileMatch": [
+        "^install-extras.json$"
+      ],
+      "matchStrings": [
+        "\\\"(?<moduleName>(mod-|edge-|okapi).*?)-(?<currentValue>[0-9]+\\.[0-9]+\\.[0-9]+?)\\\""
+      ],
       "datasourceTemplate": "docker",
       "depNameTemplate": "folioorg/{{{moduleName}}}"
     }
   ],
-
   "packageRules": [
     {
-      "baseBranchList": ["main", "master"],
-      "packagePatterns": ["^@folio/","^folioorg/"],
+      "matchBaseBranches": [
+        "main",
+        "master"
+      ],
       "groupName": "Main branch updates",
-      "updateTypes": ["patch"],
-      "enabled": true
+      "matchUpdateTypes": [
+        "patch"
+      ],
+      "enabled": true,
+      "matchPackageNames": [
+        "/^@folio//",
+        "/^folioorg//"
+      ]
     },
     {
-      "baseBranchList": ["R2-2024"],
-      "packagePatterns": ["^@folio/", "^folioorg/"],
+      "matchBaseBranches": [
+        "R2-2024"
+      ],
       "groupName": "FOLIO R2 2024 updates",
-      "updateTypes": ["patch"],
-      "enabled": true
+      "matchUpdateTypes": [
+        "patch"
+      ],
+      "enabled": true,
+      "matchPackageNames": [
+        "/^@folio//",
+        "/^folioorg//"
+      ]
     }
   ]
 }
